flarocca.api-rate-limit-challenge.d71952b230fc7aaf7eff4bc75d7bf33fc48cbb8b
Running as unit: run-p1970365-i14550473.scope; invocation ID: 52af702fc7e446938f86b2b0d32b76ae
   Compiling proc-macro2 v1.0.103
   Compiling quote v1.0.42
   Compiling unicode-ident v1.0.22
   Compiling libc v0.2.177
    Checking cfg-if v1.0.4
   Compiling serde_core v1.0.228
    Checking smallvec v1.15.1
    Checking bytes v1.11.0
    Checking pin-project-lite v0.2.16
   Compiling parking_lot_core v0.9.12
    Checking scopeguard v1.2.0
    Checking itoa v1.0.15
    Checking memchr v2.7.6
    Checking lock_api v0.4.14
   Compiling serde v1.0.228
    Checking futures-core v0.3.31
   Compiling syn v2.0.111
    Checking stable_deref_trait v1.2.1
    Checking futures-sink v0.3.31
   Compiling autocfg v1.5.0
   Compiling pkg-config v0.3.32
    Checking signal-hook-registry v1.4.7
    Checking parking_lot v0.12.5
    Checking socket2 v0.6.1
    Checking mio v1.1.0
   Compiling num-traits v0.2.19
   Compiling version_check v0.9.5
   Compiling typenum v1.19.0
    Checking once_cell v1.21.3
   Compiling fnv v1.0.7
   Compiling ident_case v1.0.1
   Compiling generic-array v0.14.7
   Compiling strsim v0.11.1
   Compiling getrandom v0.3.4
    Checking pin-utils v0.1.0
    Checking ryu v1.0.20
    Checking percent-encoding v2.3.2
    Checking litemap v0.8.1
    Checking writeable v0.6.2
    Checking log v0.4.28
   Compiling crunchy v0.2.4
    Checking tracing-core v0.1.35
   Compiling jobserver v0.1.34
   Compiling serde_json v1.0.145
   Compiling tiny-keccak v2.0.2
   Compiling zerocopy v0.8.30
   Compiling icu_normalizer_data v2.1.1
    Checking futures-task v0.3.31
   Compiling icu_properties_data v2.1.1
    Checking slab v0.4.11
   Compiling find-msvc-tools v0.1.5
   Compiling shlex v1.3.0
    Checking futures-util v0.3.31
    Checking futures-channel v0.3.31
    Checking byteorder v1.5.0
   Compiling cc v1.2.47
    Checking subtle v2.6.1
   Compiling getrandom v0.2.16
    Checking crypto-common v0.1.7
    Checking block-buffer v0.10.4
    Checking digest v0.10.7
    Checking tinyvec_macros v0.1.1
   Compiling typeid v1.0.3
   Compiling ucd-trie v0.1.7
    Checking tinyvec v1.10.0
   Compiling pest v2.8.4
   Compiling zstd-sys v2.0.16+zstd.1.5.7
   Compiling const-random-macro v0.1.16
    Checking bitflags v2.10.0
    Checking rand_core v0.9.3
    Checking ppv-lite86 v0.2.21
    Checking form_urlencoded v1.2.2
    Checking http v1.4.0
    Checking const-random v0.1.18
    Checking unicode-normalization v0.1.25
    Checking rand_chacha v0.9.0
    Checking unicode-properties v0.1.4
    Checking unicode-bidi v0.3.18
    Checking alloc-no-stdlib v2.0.4
    Checking utf8_iter v1.0.4
   Compiling pest_meta v2.8.4
    Checking foldhash v0.1.5
    Checking http-body v1.0.1
   Compiling synstructure v0.13.2
   Compiling darling_core v0.21.3
    Checking cpufeatures v0.2.17
   Compiling crc32fast v1.5.0
   Compiling erased-serde v0.4.9
   Compiling zstd-safe v7.2.4
    Checking sha2 v0.10.9
    Checking hashbrown v0.15.5
    Checking stringprep v0.1.5
    Checking alloc-stdlib v0.2.2
   Compiling pest_generator v2.8.4
    Checking rand v0.9.2
    Checking dlv-list v0.5.2
    Checking hmac v0.12.1
    Checking md-5 v0.10.6
   Compiling pq-sys v0.7.5
    Checking siphasher v1.0.1
   Compiling zerofrom-derive v0.1.6
   Compiling tokio-macros v2.6.0
   Compiling serde_derive v1.0.228
   Compiling yoke-derive v0.8.1
    Checking tokio v1.48.0
   Compiling zerovec-derive v0.11.2
    Checking zerofrom v0.1.6
   Compiling displaydoc v0.2.5
    Checking yoke v0.8.1
   Compiling tracing-attributes v0.1.31
    Checking zerotrie v0.2.3
   Compiling darling_macro v0.21.3
    Checking zerovec v0.11.5
   Compiling darling v0.21.3
   Compiling async-trait v0.1.89
    Checking tracing v0.1.41
    Checking fallible-iterator v0.2.0
    Checking tinystr v0.8.2
    Checking icu_locale_core v2.1.1
    Checking potential_utf v0.1.4
    Checking simd-adler32 v0.3.7
    Checking icu_collections v2.1.1
    Checking regex-syntax v0.8.8
    Checking icu_provider v2.1.1
    Checking tower-service v0.3.3
    Checking adler2 v2.0.1
    Checking hashbrown v0.14.5
   Compiling httparse v1.10.1
    Checking icu_normalizer v2.1.1
    Checking icu_properties v2.1.1
   Compiling either v1.15.0
   Compiling heck v0.5.0
    Checking winnow v0.7.14
   Compiling diesel_derives v2.3.5
    Checking lazy_static v1.5.0
    Checking base64 v0.22.1
   Compiling dsl_auto_type v0.2.0
    Checking postgres-protocol v0.6.9
    Checking idna_adapter v1.2.1
    Checking idna v1.1.0
    Checking ordered-multimap v0.7.3
    Checking tokio-util v0.7.17
    Checking url v2.5.7
    Checking regex-automata v0.4.13
    Checking miniz_oxide v0.8.9
   Compiling pest_derive v2.8.4
    Checking phf_shared v0.13.1
    Checking hashlink v0.10.0
    Checking brotli-decompressor v5.0.0
   Compiling darling_core v0.20.11
    Checking toml_parser v1.0.4
   Compiling diesel_table_macro_syntax v0.3.0
    Checking toml_datetime v0.7.3
    Checking serde_spanned v1.0.3
    Checking num-integer v0.1.46
    Checking encoding_rs v0.8.35
    Checking iana-time-zone v0.1.64
    Checking tower-layer v0.3.3
    Checking unicode-segmentation v1.12.0
   Compiling thiserror v2.0.17
    Checking fastrand v2.3.0
    Checking arraydeque v0.5.1
    Checking backon v1.6.0
    Checking convert_case v0.6.0
    Checking ron v0.12.0
    Checking num-bigint v0.4.6
    Checking chrono v0.4.42
    Checking yaml-rust2 v0.10.4
    Checking toml v0.9.8
    Checking brotli v8.0.2
    Checking serde-untagged v0.1.9
   Compiling darling_macro v0.20.11
    Checking json5 v0.4.1
    Checking flate2 v1.1.5
    Checking phf v0.13.1
    Checking combine v4.6.7
    Checking rust-ini v0.21.3
    Checking deadpool-runtime v0.1.4
    Checking postgres-types v0.2.11
    Checking uuid v1.18.1
   Compiling thiserror-impl v2.0.17
    Checking num_cpus v1.17.0
   Compiling proc-macro-error-attr2 v2.0.0
    Checking whoami v1.6.1
    Checking equivalent v1.0.2
    Checking atomic-waker v1.1.2
    Checking sync_wrapper v1.0.2
    Checking httpdate v1.0.3
    Checking arc-swap v1.7.1
    Checking compression-core v0.4.30
    Checking hashbrown v0.16.1
    Checking pathdiff v0.2.3
    Checking sha1_smol v1.0.1
    Checking downcast-rs v2.0.2
    Checking zstd v0.13.3
    Checking config v0.15.19
    Checking hyper v1.8.1
    Checking compression-codecs v0.4.32
    Checking indexmap v2.12.1
    Checking tokio-postgres v0.7.15
   Compiling proc-macro-error2 v2.0.1
    Checking deadpool v0.12.3
   Compiling darling v0.20.11
    Checking bb8 v0.9.1
    Checking http-body-util v0.1.3
    Checking hdrhistogram v7.5.4
    Checking scoped-futures v0.1.4
   Compiling anyhow v1.0.100
    Checking mime v0.3.17
    Checking tower v0.5.2
    Checking axum-core v0.5.5
   Compiling validator_derive v0.20.0
    Checking hyper-util v0.1.18
    Checking async-compression v0.4.33
    Checking regex v1.12.2
    Checking matchers v0.2.0
    Checking sharded-slab v0.1.7
    Checking serde_urlencoded v0.7.1
    Checking tracing-serde v0.2.0
   Compiling axum-macros v0.5.0
    Checking tracing-log v0.2.0
    Checking serde_path_to_error v0.1.20
    Checking thread_local v1.1.9
    Checking diesel v2.3.4
    Checking matchit v0.8.4
    Checking nu-ansi-term v0.50.3
    Checking validator v0.20.0
    Checking tracing-subscriber v0.3.20
    Checking tower-http v0.6.7
    Checking dotenvy v0.15.7
    Checking redis v0.32.7
    Checking axum v0.8.7
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.3.4/src/query_builder/ast_pass.rs:228:51
    |
228 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

    Checking deadpool-redis v0.22.0
    Checking redis_cache v0.1.0 (/tmp/nix-shell.uUVugk/flarocca_api-rate-limit-challenge_ip175a5t/libs/redis_cache)
For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
